# stream-cdc

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  check_dynamo_items.sh  check_sqs.sh  config_loader.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  start.sh  test.py  test.sh  tests.sh
.github/workflows/: ci.yml  format.yml  tests.yaml
dynamodb-config/: init.sh
kubernetes/: configmap.yml  deployment.yml  namespace.yml
mysql-config/: init.sql  mysql.cnf
scripts/: check-sqs.sh  pre-commit-check.sh  simple-test-db.sh  test-db.sh
src/: config_loader.py  datasource_factory.py  logger.py  main.py  processor.py  serializer.py  stream_factory.py  worker.py
stream_cdc/: main.py
stream_cdc/config/: loader.py
stream_cdc/datasources/: __init__.py  base.py  factory.py  mysql.py
stream_cdc/filters/: __init__.py  base.py  factory.py
stream_cdc/position/: position.py
stream_cdc/processing/: __init__.py  coordinator.py  processor.py  processors.py  worker.py
stream_cdc/profiling/: Dockerfile  analyze_profile.py  profile_app.py  profiler.py  requirements.txt  run_profiling.sh
stream_cdc/profiling/profile_analysis/: bottleneck_report.md
stream_cdc/profiling/profiles/: app_main_1746604955.prof  app_main_1746605303.prof
stream_cdc/state/: __init__.py  base.py  dynamodb.py  factory.py
stream_cdc/state_manager/: state_manager.py
stream_cdc/streams/: __init__.py  base.py  factory.py  sqs.py  test.py
stream_cdc/utils/: exceptions.py  logger.py  serializer.py
tests/integration/: simple_integration_test.py
(+11 files in other folders)
